# mcp-servers

./: README.md
arxiv-downloader/: README.md  TESTING.md  requirements.txt  server.py
arxiv-downloader/providers/: arxiv_provider.py  base.py
docs/: README.md
docs/architecture/: mcp-overview.md
docs/planning/: implementation-plan.md  project-roadmap.md
docs/security/: api-key-management.md
docs/tutorials/: claude-desktop-setup.md  fastmcp-implementation-guide.md  llm-api-bridge-user-guide.md  python-development-setup.md
llm-api-bridge/: README.md  TESTING.md  requirements.txt  server.py
llm-api-bridge/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
mcp-client/: README.md  TUTORIAL.md  client.py
mcp-client/examples/: test_servers.py
projects/: intro-mcp-project.md
rag-basics/: CLAUDE.md  EMBED.md  MCP.md  PLAN.md  QUERY.md  README.md  setup.cfg
rag-basics/local_test/: README.md  local_config.py  local_rag_implementation.py  step1_convert_pdfs.py  step2_simple_rag.py  step3_interactive_rag.py
rag-basics/scirag/: __init__.py  config.py  dataset.py  ocr.py  scirag.py  scirag_evaluator.py  scirag_gemini.py  scirag_hybrid.py  scirag_openai.py  scirag_paperqa2.py  scirag_perplexity.py  scirag_vertexai.py
