[metadata]
name = scirag
version = attr: scirag.version.__version__
description = A short description of your project.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
url = https://github.com/yourusername/scirag
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
